--- a/app/src/main/res/drawable/card.xml
+++ b/app/src/main/res/drawable/card.xml
@@ -20,7 +20,7 @@
         android:right="8dp"
         android:top="8dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/white" />
+            <solid android:color="?android:attr/colorBackground" />
         </shape>
     </item>
 
