--- a/app/src/main/res/layout/edt_formulaire.xml
+++ b/app/src/main/res/layout/edt_formulaire.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="?android:attr/colorBackground">
 
     <LinearLayout
         android:id="@+id/edt_formulaire"
