--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="IIEnsTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <style name="IIEnsTheme.Light" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/black</item>
         <item name="android:colorPrimary">@color/orange</item>
         <item name="android:colorPrimaryDark">@color/darkorange</item>
+        <item name="android:colorBackground">@color/ltGray</item>
 
-        <item name="android:checkboxStyle">@style/Widget.AppCompat.CompoundButton.CheckBox</item>
+        <item name="android:preferenceScreenStyle">@style/PreferenceScreen.Light</item>
+        <item name="android:actionBarStyle">@style/ActionBar.Light</item>
+        <item name="navigationDrawerStyle">@style/NavigationDrawer.Light</item>
+        <item name="bottomNavigationStyle">@style/BottomNavigation.Light</item>
+        <item name="selectorRef">@drawable/selector_light</item>
     </style>
 
-    <style name="ActionBar" parent="IIEnsTheme">
+    <style name="IIEnsTheme.Dark" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorPrimary">@color/dkGray</item>
+        <item name="android:colorPrimaryDark">@color/black</item>
+        <item name="android:colorBackground">@color/black</item>
+
+        <item name="android:preferenceScreenStyle">@style/PreferenceScreen.Dark</item>
+        <item name="android:actionBarStyle">@style/ActionBar.Dark</item>
+        <item name="navigationDrawerStyle">@style/NavigationDrawer.Dark</item>
+        <item name="bottomNavigationStyle">@style/BottomNavigation.Dark</item>
+        <item name="selectorRef">@drawable/selector_dark</item>
+    </style>
+
+    <style name="PreferenceScreen.Light" parent="IIEnsTheme.Light">
+        <item name="android:colorBackground">@color/ltGray</item>
+    </style>
+
+    <style name="PreferenceScreen.Dark" parent="IIEnsTheme.Dark">
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="ActionBar.Light" parent="IIEnsTheme.Light">
         <item name="android:background">@color/orange</item>
     </style>
 
-    <style name="NavigationDrawer" parent="IIEnsTheme">
+    <style name="ActionBar.Dark" parent="IIEnsTheme.Dark">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="NavigationDrawer.Light" parent="IIEnsTheme.Light">
         <item name="android:colorPrimaryDark">@color/ltGray</item>
     </style>
 
-    <style name="BottomNavigation" parent="IIEnsTheme">
-        <item name="android:textColor">@color/black</item>
+    <style name="NavigationDrawer.Dark" parent="IIEnsTheme.Dark">
         <item name="android:colorPrimaryDark">@color/white</item>
+    </style>
+
+    <style name="BottomNavigation.Light" parent="IIEnsTheme.Light">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:colorPrimary">@color/white</item>
+        <item name="android:colorPrimaryDark">@color/ltGray</item>
+        <item name="android:elevation">4dp</item>
+    </style>
+
+    <style name="BottomNavigation.Dark" parent="IIEnsTheme.Dark">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorPrimary">@color/dkGray</item>
+        <item name="android:colorPrimaryDark">@color/ltGray</item>
         <item name="android:elevation">4dp</item>
     </style>
 
