--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,6 +2,7 @@
 
     <color name="black">#FF000000</color>
     <color name="blue">#0000FF</color>
+    <color name="ltBlue">#008FFF</color>
     <color name="cyan">#FF00FFFF</color>
     <color name="dkGray">#FF444444</color>
     <color name="gray">#808080</color>
