--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,12 @@
     <style name="IIEnsTheme.Light" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/black</item>
         <item name="android:colorPrimary">@color/orange</item>
-        <item name="android:colorPrimaryDark">@color/darkorange</item>
-        <item name="android:colorBackground">@color/ltGray</item>
+        <item name="android:colorPrimaryDark">@color/orange</item>
+        <item name="android:colorBackground">@color/white</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="android:preferenceScreenStyle">@style/PreferenceScreen.Light</item>
-        <item name="android:actionBarStyle">@style/ActionBar.Light</item>
+        <item name="android:actionBarStyle">@style/ActionBarLight</item>
         <item name="navigationDrawerStyle">@style/NavigationDrawer.Light</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation.Light</item>
         <item name="selectorRef">@drawable/selector_light</item>
@@ -17,39 +18,57 @@
     <style name="IIEnsTheme.Dark" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/white</item>
         <item name="android:colorPrimary">@color/dkGray</item>
-        <item name="android:colorPrimaryDark">@color/black</item>
+        <item name="android:colorPrimaryDark">@color/dkGray</item>
         <item name="android:colorBackground">@color/black</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
-        <item name="android:preferenceScreenStyle">@style/PreferenceScreen.Dark</item>
-        <item name="android:actionBarStyle">@style/ActionBar.Dark</item>
+        <item name="android:preferenceStyle">@style/PreferenceScreen.Dark</item>
+        <item name="android:actionBarStyle">@style/ActionBarDark</item>
         <item name="navigationDrawerStyle">@style/NavigationDrawer.Dark</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation.Dark</item>
         <item name="selectorRef">@drawable/selector_dark</item>
     </style>
 
-    <style name="PreferenceScreen.Light" parent="IIEnsTheme.Light">
-        <item name="android:colorBackground">@color/ltGray</item>
-    </style>
-
-    <style name="PreferenceScreen.Dark" parent="IIEnsTheme.Dark">
-        <item name="android:background">@color/black</item>
-    </style>
-
-    <style name="ActionBar.Light" parent="IIEnsTheme.Light">
+    <style name="ActionBarLight">
+        <item name="android:textColorPrimary">@color/black</item>
         <item name="android:background">@color/orange</item>
     </style>
 
-    <style name="ActionBar.Dark" parent="IIEnsTheme.Dark">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@color/black</item>
+    <style name="ActionBarDark">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:background">@color/dkGray</item>
+    </style>
+
+    <style name="PreferenceScreen.Light" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorPrimary">@color/orange</item>
+        <item name="android:colorPrimaryDark">@color/orange</item>
+        <item name="android:textColor">@color/aqua</item>
+        <item name="android:windowBackground">@color/blue</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="PreferenceScreen.Dark" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorPrimary">@color/orange</item>
+        <item name="android:colorPrimaryDark">@color/orange</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:windowBackground">@color/green</item>
+        <item name="android:background">@color/ltGray</item>
     </style>
 
     <style name="NavigationDrawer.Light" parent="IIEnsTheme.Light">
+        <item name="android:colorPrimary">@color/ltGray</item>
         <item name="android:colorPrimaryDark">@color/ltGray</item>
+        <item name="android:colorBackground">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:actionMenuTextColor">@color/orange</item>
     </style>
 
     <style name="NavigationDrawer.Dark" parent="IIEnsTheme.Dark">
+        <item name="android:colorPrimary">@color/aqua</item>
         <item name="android:colorPrimaryDark">@color/white</item>
+        <item name="android:colorBackground">@color/dkGray</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/orange</item>
     </style>
 
     <style name="BottomNavigation.Light" parent="IIEnsTheme.Light">
