--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     tools:context="com.iiens.net.Main">
 
     <!-- Contenu -->
@@ -65,9 +66,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/navigation_drawer"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="start"
         android:theme="?attr/navigationDrawerStyle"
+        app:headerLayout="@layout/navigation_drawer_header"
         app:itemIconTint="?attr/selectorRef"
         app:itemTextColor="?android:attr/textColor"
         app:menu="@menu/navigation_drawer"
