--- a/app/src/main/res/anim/bottom_out.xml
+++ b/app/src/main/res/anim/bottom_out.xml
@@ -5,6 +5,8 @@
 <translate
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromYDelta="0"
-    android:toYDelta="100%p"
-    android:duration="500"/> 
+    android:toYDelta="20%p"
+    android:duration="500"
+    android:interpolator="@android:anim/linear_interpolator"/>
+
 </set>
