--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -8,7 +8,7 @@
 
     <item android:id="@+id/action_edt"
           android:title="@string/menu_edt"
-          android:icon="@drawable/ic_school" />
+          android:icon="@drawable/dw_school" />
 
     <item android:id="@+id/action_twitter"
           android:title="@string/menu_twitter"
