--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,5 @@
     <attr name="navigationDrawerStyle" format="reference" />
     <attr name="bottomNavigationStyle" format="reference" />
     <attr name="selectorRef" format="reference" />
+    <attr name="iconColor" format="reference" />
 </resources>
