--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="?android:colorBackground"
     android:fitsSystemWindows="true"
     tools:context="com.iiens.net.Main">
 
@@ -51,7 +51,7 @@
             android:theme="?attr/bottomNavigationStyle"
             app:itemBackground="?attr/selectorRef"
             app:itemIconTint="?attr/selectorRef"
-            app:itemTextColor="?android:attr/textColor"
+            app:itemTextColor="?android:textColor"
             app:menu="@menu/bottom_navigation"
             android:visibility="gone"/>
 
@@ -69,7 +69,7 @@
         android:theme="?attr/navigationDrawerStyle"
         app:headerLayout="@layout/navigation_drawer_header"
         app:itemIconTint="?attr/selectorRef"
-        app:itemTextColor="?android:attr/textColor"
+        app:itemTextColor="?android:textColor"
         app:menu="@menu/navigation_drawer"
         android:elevation="4dp" />
 
