--- a/app/src/main/res/layout/edt_formulaire.xml
+++ b/app/src/main/res/layout/edt_formulaire.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="?android:attr/colorBackground">
+    android:background="?android:colorBackground">
 
     <LinearLayout
         android:id="@+id/edt_formulaire"
