--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="?android:attr/colorBackground">
+    android:background="?android:colorBackground">
 
     <ListView android:id="@+id/listview"
               android:layout_width="fill_parent"
@@ -13,8 +13,6 @@
         />
 
     <include layout="@layout/progress_spinner" />
-
-    <!-- Menu de navigation -->
 
 </LinearLayout>
 
