--- a/app/src/main/res/layout/news_detail.xml
+++ b/app/src/main/res/layout/news_detail.xml
@@ -16,15 +16,14 @@
             android:id="@+id/news_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/header_news"
-            android:drawableLeft="@drawable/aeiie"
+            android:background="?android:colorBackground"
+            android:drawableStart="@drawable/aeiie"
             android:gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingTop="8dp"
-            android:singleLine="false"
             android:text="@string/news_title"
-            android:textColor="@color/black"
+            android:textColor="?android:textColor"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -32,9 +31,10 @@
             android:id="@+id/news_description"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:background="?android:colorPrimary"
             android:padding="16dp"
             android:text="@string/news_description"
-            android:textColor="@color/black"
+            android:textColor="?android:textColor"
             android:textSize="14sp" />
 
     </LinearLayout>
