--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,9 @@
         <item name="android:colorBackground">@color/white</item>
         <item name="android:windowTranslucentStatus">true</item>
 
-        <item name="android:preferenceStyle">@style/PreferenceScreenLight</item>
+        <item name="iconColor">@color/black</item>
+        <item name="colorAccent">@color/darkorange</item>
+
         <item name="android:actionBarStyle">@style/ActionBarLight</item>
         <item name="navigationDrawerStyle">@style/NavigationDrawer.Light</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation.Light</item>
@@ -17,12 +19,14 @@
 
     <style name="IIEnsTheme.Dark" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/white</item>
-        <item name="android:colorPrimary">@color/dkGray</item>
+        <item name="android:colorPrimary">@color/gray</item>
         <item name="android:colorPrimaryDark">@color/dkGray</item>
-        <item name="android:colorBackground">@color/black</item>
+        <item name="android:colorBackground">@color/dkGray</item>
         <item name="android:windowTranslucentStatus">true</item>
 
-        <item name="android:preferenceStyle">@style/PreferenceScreenDark</item>
+        <item name="iconColor">@color/ltGray</item>
+        <item name="colorAccent">@color/darkorange</item>
+
         <item name="android:actionBarStyle">@style/ActionBarDark</item>
         <item name="navigationDrawerStyle">@style/NavigationDrawer.Dark</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation.Dark</item>
@@ -39,14 +43,6 @@
         <item name="android:background">@color/dkGray</item>
     </style>
 
-    <style name="PreferenceScreenLight">
-        <item name="android:background">@color/white</item>
-    </style>
-
-    <style name="PreferenceScreenDark">
-        <item name="android:background">@color/dkGray</item>
-    </style>
-
     <style name="NavigationDrawer.Light" parent="IIEnsTheme.Light">
         <item name="android:colorPrimary">@color/ltGray</item>
         <item name="android:colorPrimaryDark">@color/ltGray</item>
@@ -56,8 +52,8 @@
     </style>
 
     <style name="NavigationDrawer.Dark" parent="IIEnsTheme.Dark">
-        <item name="android:colorPrimary">@color/aqua</item>
-        <item name="android:colorPrimaryDark">@color/white</item>
+        <item name="android:colorPrimary">@color/ltGray</item>
+        <item name="android:colorPrimaryDark">@color/gray</item>
         <item name="android:colorBackground">@color/dkGray</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:actionMenuTextColor">@color/orange</item>
@@ -106,6 +102,13 @@
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
         <item name="android:paddingTop">8dp</item>
+    </style>
+
+    <style name="TweetLightStyle" parent="tw__TweetLightStyle">
+    </style>
+
+    <style name="TweetDarkStyle" parent="tw__TweetDarkStyle">
+        <item name="tw__container_bg_color">@color/dkGray</item>
     </style>
 
 </resources>
