--- a/app/src/main/res/layout/news_detail.xml
+++ b/app/src/main/res/layout/news_detail.xml
@@ -6,7 +6,6 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/card"
         android:orientation="vertical"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
@@ -31,7 +30,7 @@
             android:id="@+id/news_description"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="?android:colorPrimary"
+            android:background="?android:colorBackground"
             android:padding="16dp"
             android:text="@string/news_description"
             android:textColor="?android:textColor"
