--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -6,13 +6,13 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:paddingTop="8dp"
-    android:paddingBottom="4dp">
+    android:paddingBottom="4dp"
+    android:background="?android:colorBackground">
 
         <TextView
             android:id="@+id/news_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="?android:colorBackground"
             android:drawableStart="@drawable/aeiie"
             android:gravity="center"
             android:paddingLeft="8dp"
@@ -21,5 +21,5 @@
             android:text="@string/news_title"
             android:textColor="?android:attr/textColor"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="italic" />
 </LinearLayout>
