--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -26,7 +26,7 @@
             <group
                 android:checkableBehavior="single">
 
-                <item android:id="@+id/action_nav_clubs"
+                <item android:id="@+id/action_nav_itvtube"
                       android:title="@string/menu_clubs"
                       android:icon="@drawable/ic_people" />
 
