--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -2,49 +2,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.iiens.net.Main">
 
-    <group android:id="@+id/navigation_base"
-           android:checkableBehavior="single"
-            android:visible="false">
+    <group
+        android:id="@+id/navigation_base"
+        android:checkableBehavior="single"
+        android:visible="false">
 
-        <item android:id="@+id/action_nav_news"
-              android:title="@string/menu_news"
-              android:icon="@drawable/ic_chrome_reader_mode" />
+        <item
+            android:id="@+id/action_nav_news"
+            android:title="@string/menu_news"
+            android:icon="@drawable/ic_chrome_reader_mode" />
 
-        <item android:id="@+id/action_nav_edt"
-              android:title="@string/menu_edt"
-              android:icon="@drawable/dw_school" />
+        <item
+            android:id="@+id/action_nav_edt"
+            android:title="@string/menu_edt"
+            android:icon="@drawable/dw_school" />
 
-        <item android:id="@+id/action_nav_twitter"
-              android:title="@string/menu_twitter"
-              android:icon="@drawable/tw__ic_logo_default" />
+        <item
+            android:id="@+id/action_nav_twitter"
+            android:title="@string/menu_twitter"
+            android:icon="@drawable/tw__ic_logo_default" />
 
     </group>
 
-    <item android:id="@+id/menu_group_pages"
+    <item
+        android:id="@+id/menu_group_pages"
         android:title="@string/menu_group_pages">
+
         <menu>
             <group
                 android:checkableBehavior="single">
 
-                <item android:id="@+id/action_nav_itvtube"
-                      android:title="@string/menu_clubs"
-                      android:icon="@drawable/ic_people" />
+                <item
+                    android:id="@+id/action_nav_itvtube"
+                    android:title="@string/menu_clubs"
+                    android:icon="@drawable/ic_people" />
 
-                <item android:id="@+id/action_nav_breviaire"
-                      android:title="@string/menu_breviaire"
-                      android:icon="@drawable/ic_music_note"
-                      android:checkable="false" />
+                <item
+                    android:id="@+id/action_nav_breviaire"
+                    android:title="@string/menu_breviaire"
+                    android:icon="@drawable/ic_music_note"
+                    android:checkable="false" />
 
             </group>
         </menu>
+
     </item>
 
-    <group android:id="@+id/navigation_other"
-           android:checkableBehavior="single">
+    <group
+        android:id="@+id/navigation_other"
+        android:checkableBehavior="single">
 
-        <item android:id="@+id/action_nav_parametres"
-              android:title="@string/menu_settings"
-              android:icon="@drawable/ic_settings" />
+        <item
+            android:id="@+id/action_nav_arise"
+            android:title="@string/menu_arise"
+            android:icon="@drawable/arise"/>
+
+        <item
+            android:id="@+id/action_nav_parametres"
+            android:title="@string/menu_settings"
+            android:icon="@drawable/ic_settings" />
 
     </group>
 
