--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <files-path  path="Download/" name="downloads"/>
+    <files-path path="./Download" name="downloads"/>
+    <files-path path="." name="files"/>
 </paths>
