--- a/app/src/main/res/layout/edt_formulaire_v2.xml
+++ b/app/src/main/res/layout/edt_formulaire_v2.xml
@@ -9,7 +9,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingBottom="48dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -105,7 +106,6 @@
             android:orientation="horizontal"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:visibility="gone"
             android:animateLayoutChanges="true">
 
             <TextView
@@ -131,7 +131,6 @@
             android:orientation="horizontal"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:visibility="gone"
             android:animateLayoutChanges="true">
 
             <TextView
