--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -53,6 +53,10 @@
         android:checkableBehavior="single">
 
         <item
+            android:id="@+id/action_nav_anniv"
+            android:title="@string/menu_anniv"
+            android:icon="@drawable/deciibel"/>
+        <item
             android:id="@+id/action_nav_arise"
             android:title="@string/menu_arise"
             android:icon="@drawable/arise"/>
