--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,13 +3,16 @@
     <color name="black">#FF000000</color>
     <color name="blue">#0000FF</color>
     <color name="ltBlue">#008FFF</color>
+    <color name="oBlue">#5DADE2</color>
     <color name="cyan">#FF00FFFF</color>
     <color name="dkGray">#FF444444</color>
     <color name="gray">#808080</color>
     <color name="green">#008000</color>
+    <color name="ltGreen">#28B463</color>
     <color name="ltGray">#DDDDDD</color>
     <color name="magenta">#FFFF00FF</color>
     <color name="red">#FF0000</color>
+    <color name="bordeaux">#E74C3C</color>
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
     <color name="yellow">#FFFF00</color>
@@ -24,6 +27,7 @@
     <color name="navy">#000080</color>
     <color name="orange">#FF9800</color>
     <color name="darkorange">#FF5722</color>
+    <color name="intro_news">#FFC442</color>
 
     <!-- Couleurs pour l'edt -->
     <color name="coursback">#f0ffe0</color>
