--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/menu_items">
 
-    <item android:id="@+id/action_news"
-          android:title="@string/menu_news"
+    <item android:id="@+id/action_home"
+          android:title="@string/menu_home"
           android:icon="@drawable/ic_chrome_reader_mode" />
 
     <item android:id="@+id/action_edt"
