Début de refactoring pour afficher les anniversaires avec les news sur la page d'accueil

--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -10,7 +10,7 @@
     android:background="?android:colorBackground">
 
         <TextView
-            android:id="@+id/news_title"
+            android:id="@+id/item_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/aeiie"
