--- a/app/src/main/res/layout/news_detail.xml
+++ b/app/src/main/res/layout/news_detail.xml
@@ -12,7 +12,7 @@
         android:paddingTop="8dp" >
 
         <TextView
-            android:id="@+id/news_title"
+            android:id="@+id/item_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="?android:colorBackground"
@@ -27,7 +27,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/news_description"
+            android:id="@+id/item_description"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="?android:colorBackground"
