Style material design

--- a/app/src/main/res/drawable/selector_dark.xml
+++ b/app/src/main/res/drawable/selector_dark.xml
@@ -4,5 +4,5 @@
           android:color="@color/orange"
           android:drawable="@drawable/bottom_navigation_border" />
     <item android:color="@color/ltGray"
-          android:drawable="@color/dkGray" />
+          android:drawable="@color/primaryColor.Dark" />
 </selector>
