--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,7 @@
             app:itemBackground="?attr/selectorRef"
             app:itemIconTint="?attr/selectorRef"
             app:itemTextColor="?android:textColor"
-            app:menu="@menu/bottom_navigation"
-            android:visibility="gone"/>
+            app:menu="@menu/bottom_navigation"/>
 
     </RelativeLayout>
 
