--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -2,28 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.iiens.net.Main">
 
-    <group
-        android:id="@+id/navigation_base"
-        android:checkableBehavior="single"
-        android:visible="false">
-
-        <item
-            android:id="@+id/action_nav_home"
-            android:title="@string/menu_home"
-            android:icon="@drawable/ic_chrome_reader_mode" />
-
-        <item
-            android:id="@+id/action_nav_edt"
-            android:title="@string/menu_edt"
-            android:icon="@drawable/ic_school" />
-
-        <item
-            android:id="@+id/action_nav_twitter"
-            android:title="@string/menu_twitter"
-            android:icon="@drawable/tw__ic_logo_default" />
-
-    </group>
-
     <item
         android:id="@+id/menu_group_pages"
         android:title="@string/menu_group_pages">
@@ -56,6 +34,11 @@
             android:id="@+id/action_nav_arise"
             android:title="@string/menu_arise"
             android:icon="@drawable/fa_plug"/>
+
+        <item
+            android:id="@+id/action_nav_etranger"
+            android:title="@string/menu_etranger"
+            android:icon="@drawable/fa_flag"/>
 
         <item
             android:id="@+id/action_nav_parametres"
